<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cnn_white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/weather_detail_margin_left"
    android:paddingRight="@dimen/weather_detail_margin_left"
    android:paddingTop="@dimen/weather_detail_margin_left">

    <TextView
        android:id="@+id/weather_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomorrow_txt"
        android:textColor="@color/cnn_black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/weather_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/current_date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/cnn_black"
                android:text="@string/max_temp_txt"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/weather_temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/min_temp_txt"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/daily_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/art_clear" />

            <TextView
                android:id="@+id/weather_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/clear" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/weather_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/current_humidity" />

    <TextView
        android:id="@+id/weather_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/current_pressure" />

    <TextView
        android:id="@+id/weather_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/current_wind_speed" />


</LinearLayout>