<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<LinearLayout-->
    <!--android:background="@color/cnn_ocean_blue"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="200dp"-->
    <!--android:orientation="vertical" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cnn_ocean_blue"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_curent_day"
                style="@style/mainViewFragTextStyle"
                android:text="@string/current_day_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/weather_temp_max"
                style="@style/mainViewFragTextStyle"
                android:text="@string/min_temp_txt"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/weather_temp_min"
                style="@style/mainViewFragTextStyle"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="15dp"
                android:text="@string/min_temp_txt"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/daily_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/art_clear" />

            <TextView
                android:id="@+id/weather_description"
                style="@style/mainViewFragTextStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@string/clear"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>